tests/functionalTests/invalid/code/badTypeId.hs
data bool = T | F;

main :: IO ();
main = case T of {
    T -> putStr "True";
    F -> putStr "False";
};